Name:                hbro-contrib
Version:             1.2.0.0
Synopsis:            Third-party extensions to hbro.
-- Description:
Homepage:            https://bitbucket.org/k0ral/hbro-contrib
Category:            Browser,Web

License:             OtherLicense
License-file:        LICENSE
-- Copyright:
Author:              koral
Maintainer:          koral at mailoo dot org

Cabal-version:       >=1.8
Build-type:          Simple
Extra-source-files:  README.rst examples/hbro.hs
Data-files:          examples/ui.xml

Source-repository head
    Type:     hg
    Location: https://bitbucket.org/k0ral/hbro-contrib
Source-repository head
    Type:     hg
    Location: http://hgweb.twyk.org/hbro-contrib

Library
    Build-depends:
        base == 4.*,
        directory,
        filepath,
        glib,
        gtk3 >= 0.12.3,
        hbro >= 1.2.0.0,
        mtl,
        network,
        old-locale,
        pango,
        process,
        -- random-extras,
        -- random-fu,
        text,
        time,
        transformers-base,
        unix,
        webkitgtk3,
        xdg-basedir
    Exposed-modules:
        Hbro.Bookmarks,
        Hbro.Download,
        Hbro.History,
        Hbro.Misc,
        Hbro.Settings,
        Hbro.StatusBar
    Extensions:
        ConstraintKinds,
        DeriveDataTypeable,
        FlexibleContexts,
        FunctionalDependencies,
        GeneralizedNewtypeDeriving,
        MultiParamTypeClasses,
        RankNTypes
    Ghc-options: -Wall
